Added directions on how to do full install
Squashed commit of the following:

commit 96539d9a2bf1a769596901b915ec13a9d15ef02b
Author: Rob deCarvalho <robdmc@gmail.com>
Date:   Fri Jul 31 20:56:21 2015 -0400

    updated readme to include full install directions

--- a/shell_test_scripts/README
+++ b/shell_test_scripts/README
@@ -1,6 +1,6 @@
 
 # run the following command to test everything except p.crypt
-ls | p.format -t '(echo {f}); ({f})' --names f | grep -v crypt | bash -
+ls  *.sh | p.format -t '(echo {f}); ({f})' --names f | grep -v crypt | bash -
 
 p.crypt can be tested on its own by running
 crypt.examples.sh
